WIP works on local

--- a/apps/game-of-life/go/game-of-life-dd-rum/webapp/resources/index.html
+++ b/apps/game-of-life/go/game-of-life-dd-rum/webapp/resources/index.html
@@ -7,7 +7,7 @@
     applicationId: window.env.DD_APPLICATION_ID,
     // `site` refers to the Datadog site parameter of your organization
     // see https://docs.datadoghq.com/getting_started/site/
-    site: 'datadoghq.com',
+    site: 'datad0g.com',
     service: 'game-of-life-dd-rum',
     env: 'prod',
     // Specify a version number to identify the deployed version of your application in Datadog
