--- a/apps/game-of-life/go/game-of-life-dd-rum/webapp/resources/index.html
+++ b/apps/game-of-life/go/game-of-life-dd-rum/webapp/resources/index.html
@@ -7,27 +7,30 @@
     applicationId: window.env.DD_APPLICATION_ID,
     // `site` refers to the Datadog site parameter of your organization
     // see https://docs.datadoghq.com/getting_started/site/
-    site: 'datad0g.com',
-    service: 'game-of-life-dd-rum',
+    site: 'datadoghq.com',
+    service: 'game-of-life-otel',
     env: 'prod',
     // Specify a version number to identify the deployed version of your application in Datadog
     // version: '1.0.0',
     sessionSampleRate: 100,
-    sessionReplaySampleRate: 20,
+    sessionReplaySampleRate: 0,
     trackUserInteractions: true,
     trackResources: true,
     trackLongTasks: true,
     defaultPrivacyLevel: 'mask-user-input',
     allowedTracingUrls: [
       { match: "http://localhost:8080", propagatorTypes: ["datadog", "tracecontext"]},
+      // { match: "http://localhost:8081", propagatorTypes: ["datadog", "tracecontext"]},
+      // { match: "http://localhost:8082", propagatorTypes: ["datadog", "tracecontext"]},
+      // { match: "http://localhost:8126", propagatorTypes: ["datadog", "tracecontext"]},
     ],
   };
   if (window.env.DD_RUM_PROXY_URL && window.env.DD_RUM_PROXY_URL != "") {
     rumCfg.proxy = window.env.DD_RUM_PROXY_URL;
   }
   window.DD_RUM && window.DD_RUM.init(rumCfg);
-  window.DD_RUM &&
-  window.DD_RUM.startSessionReplayRecording();
+  // window.DD_RUM &&
+  // window.DD_RUM.startSessionReplayRecording();
 </script>
 <html lang="en">
 <head>
