--- a/apps/game-of-life/go/game-of-life-dd/webapp/resources/index.html
+++ b/apps/game-of-life/go/game-of-life-dd/webapp/resources/index.html
@@ -1,4 +1,34 @@
 <!DOCTYPE html>
+<script src="/config.js"></script>
+<script src="https://www.datadoghq-browser-agent.com/us1/v5/datadog-rum.js" type="text/javascript"></script>
+<script>
+  let rumCfg = {
+    clientToken: window.env.DD_CLIENT_TOKEN,
+    applicationId: window.env.DD_APPLICATION_ID,
+    // `site` refers to the Datadog site parameter of your organization
+    // see https://docs.datadoghq.com/getting_started/site/
+    site: 'datadoghq.com',
+    service: 'game-of-life-dd-rum',
+    batchMessagesLimit: 1,
+    flushTimeout: 1000,
+    env: 'prod',
+    // Specify a version number to identify the deployed version of your application in Datadog
+    // version: '1.0.0',
+    sessionSampleRate: 100,
+    sessionReplaySampleRate: 0,
+    trackUserInteractions: true,
+    trackResources: true,
+    trackLongTasks: true,
+    defaultPrivacyLevel: 'mask-user-input',
+    allowedTracingUrls: [
+      { match: "http://localhost:8080", propagatorTypes: ["datadog"]},
+    ],
+  };
+  if (window.env.DD_RUM_PROXY_URL && window.env.DD_RUM_PROXY_URL != "") {
+    rumCfg.proxy = window.env.DD_RUM_PROXY_URL;
+  }
+  window.env.DD_CLIENT_TOKEN && window.env.DD_APPLICATION_ID && window.DD_RUM && window.DD_RUM.init(rumCfg);
+</script>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
