feat(otel-2674): address review

--- a/apps/game-of-life/go/game-of-life-otel/webapp/resources/index.html
+++ b/apps/game-of-life/go/game-of-life-otel/webapp/resources/index.html
@@ -8,7 +8,7 @@
     // `site` refers to the Datadog site parameter of your organization
     // see https://docs.datadoghq.com/getting_started/site/
     site: 'datadoghq.com',
-    service: 'game-of-life-dd-rum',
+    service: 'game-of-life-otel-rum',
     batchMessagesLimit: 1,
     flushTimeout: 1000,
     env: 'prod',
